--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This is the official list of The ANGLE Project Authors
+﻿# This is the official list of The ANGLE Project Authors
 # for copyright purposes.
 # This file is distinct from the CONTRIBUTORS files.
 # See the latter for an explanation.
@@ -32,3 +32,4 @@ Aitor Moreno
 Yuri O'Donnell
 Dale Stammen
 Josh Soref
+
