--- a/templates/8.1/README
+++ b/templates/8.1/README
@@ -13,14 +13,9 @@ Template installation instructions:
     1)  Browse to your Visual Studio 2013 custom project templates folder. By default, this is 
         located here:
             %userprofile%\Documents\Visual Studio 2013\Templates\ProjectTemplates
-    2)  Create a subdirectory called "Store Apps" (if it doesn't already exist), and create a 
-        subdirectory within that called "Universal Apps".
-    3)  Copy the 'Universal' template directories (as found in this README's directory) into this 
-        "Universal Apps" directory.
-    4)  Return to the \ProjectTemplates directory from Step 1, and create a subdirectory called 'Win32'
-    5)  Copy the 'Desktop' template directories (as found in this README's directory) into this 'Win32' 
-        directory.
-    6)  Restart/Launch Visual Studio 2013, and then go File -> New Project -> Visual C++. The templates 
+    2)  Copy the directories found in this README's directory into the custom project templates folder 
+        from step 1.
+    3)  Restart/Launch Visual Studio 2013, and then go File -> New Project -> Visual C++. The templates 
         should be available under 'Store Apps\Universal Apps' and 'Win32'.
         
 Building/configuring ANGLE to use in the templates:
